Add more for widgets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BgVignette</string>
+    <string name="app_name">Vignette in Bulgaria</string>
     <string name="add_new_vignette">Add new vignette</string>
     <string name="country">Country</string>
     <string name="plate">Plate</string>
