--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BgVignette</string>
+    <string name="app_name">Vignette in Bulgaria</string>
     <string name="add_new_vignette">Add new vignette</string>
     <string name="country">Country</string>
     <string name="plate">Plate</string>
